@@ -6,7 +6,7 @@
     <name>JMRI</name>
     <groupId>org.jmri</groupId>
     <artifactId>jmri</artifactId>
-    <version>5.5.6-SNAPSHOT</version>
+    <version>5.13.2-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <release.build_user>${user.name}</release.build_user>
@@ -25,10 +25,10 @@
         <jackson-core.version>2.13.4</jackson-core.version>
         <jackson-databind.version>2.13.4.2</jackson-databind.version>
         <jackson-annotations.version>2.13.4</jackson-annotations.version>
-        <jogamp.version>2.3.2</jogamp.version>
-        <openlcb.version>0.7.32</openlcb.version>
+        <jogamp.version>2.5.0</jogamp.version>
+        <openlcb.version>0.8.5</openlcb.version>
         <netbeans.version>RELEASE150</netbeans.version>
-        <jacoco.version>0.8.5</jacoco.version>
+        <jacoco.version>0.8.11</jacoco.version>
         <jacoco.reportDir>${basedir}/target/</jacoco.reportDir>
         <!-- test environment -->
         <jmri.path.program>${basedir}</jmri.path.program>
@@ -40,7 +40,7 @@
         <junit5.version>5.9.1</junit5.version>
         <junit.platform.version>1.9.1</junit.platform.version>
         <ant.jvm.args></ant.jvm.args>
-        <argLine>-Xmx1536m -Duser.language=en -Duser.region=US -Dnashorn.args=--no-deprecation-warning</argLine>
+        <argLine>-Xmx1536m -Duser.language=en -Duser.region=US -Dnashorn.args=--no-deprecation-warning --add-exports java.desktop/sun.awt=ALL-UNNAMED</argLine>
         <!-- define argLines to allow running surefire:test -->
         <surefire.argLine></surefire.argLine>
         <failsafe.argLine></failsafe.argLine>
@@ -119,7 +119,7 @@
                     <plugin>
                         <groupId>com.github.spotbugs</groupId>
                         <artifactId>spotbugs-maven-plugin</artifactId>
-                        <version>4.7.3.0</version>
+                        <version>4.8.6.2</version>
                         <configuration>
                             <plugins>
                                 <plugin>
@@ -164,7 +164,7 @@
                                     <sourceDirectories>
                                         <sourceDirectory>${basedir}</sourceDirectory>
                                     </sourceDirectories>
-                                    <includes>**/*</includes>
+                                    <includes>java/**/*</includes>
                                     <excludes>**/*.jpg,**/*.PNG,**/*.jar,**/*.dll,**/*.dylib,**/*.so,**/*.exe,
                                         **/*.zip,**/*.icns,**/*.bat,**/*.ttf,**/*.vsd,**/*.wav,**/*.spj,
                                         **/*.pdf,.metadata/.plugins/org.eclipse.core.resources/**,
@@ -477,7 +477,7 @@
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>4.7.3.0</version>
+                <version>4.8.6.2</version>
                 <!-- configured to fail on medium priority bugs (needs to be done two places)-->
                 <configuration>
                     <plugins>
@@ -649,7 +649,7 @@
                     <!-- change from default 100 warnings; keep number synced with ant javadoc target -->
                     <additionalJOption>-breakiterator -Xmaxwarns 100</additionalJOption><!-- 100 is default, here so we can easily change it -->
                     <!-- remove ",-missing" to get warnings about missing Javadoc tags -->
-                    <doclint>all</doclint>
+                    <doclint>all,-missing</doclint>
                     <author>true</author><!-- default -->
                     <use>true</use><!-- default -->
                     <failOnError>true</failOnError><!-- default -->
@@ -711,19 +711,27 @@
                     </bottom>
                     <links>
                         <link>http://docs.oracle.com/en/java/javase/11/docs/api/</link>
-                        <link>http://java.sun.com/products/javacomm/reference/api/</link>
+                        <!-- Link below removed 2024/09/15 as failing Java21 static JavaDoc build, see https://github.com/JMRI/JMRI/pull/13454 -->
+                        <!-- <link>http://java.sun.com/products/javacomm/reference/api/</link> -->
                         <link>http://www.jdom.org/docs/apidocs/</link>
                         <link>https://commons.apache.org/proper/commons-csv/apidocs/</link>
-                        <link>https://static.javadoc.io/com.fasterxml.jackson.core/jackson-databind/${jackson-databind.version}/</link>
                         <link>http://logging.apache.org/log4j/1.2/apidocs/</link>
-                        <link>http://download.java.net/media/java3d/javadoc/1.3.2/</link>
-                        <link>https://static.javadoc.io/org.openlcb/openlcb/${openlcb.version}/</link>
                         <link>https://commons.apache.org/proper/commons-lang/javadocs/api-release/</link>
-                        <link>https://javadoc.io/static/com.github.spotbugs/spotbugs-annotations/4.7.3/</link>
-                        <link>https://javadoc.io/doc/com.google.code.findbugs/jsr305/3.0.1/</link>
+                        <link>https://fazecast.github.io/jSerialComm/javadoc</link>
+                        
+                        <!-- The following are commented out because they throw warnings with Java 17        -->
+                        <!-- yet we want real warnings to fail this check in CI.                             -->
+                        <!-- By commenting them out, we lose links to their Javadoc from ours. But since     -->
+                        <!-- our web production Javadocs are made with Ant, not Maven, this is not a problem -->
+                        <!-- <link>https://static.javadoc.io/com.fasterxml.jackson.core/jackson-databind/${jackson-databind.version}/</link> -->
+                        <!-- <link>https://static.javadoc.io/org.openlcb/openlcb/${openlcb.version}/</link> -->
+                        <!-- <link>https://javadoc.io/static/com.github.spotbugs/spotbugs-annotations/4.8.6/</link> -->
+                        <!-- <link>https://javadoc.io/doc/com.google.code.findbugs/jsr305/3.0.1/</link> -->
+                        <!-- <link>https://static.javadoc.io/com.github.purejavacomm/purejavacomm/1.0.1.RELEASE/</link> -->
+                        <!-- <link>https://static.javadoc.io/com.alexandriasoftware.swing/jsplitbutton/1.3.1/</link> -->
+
                         <!-- <link>https://jogamp.org/deployment/jogamp-next/javadoc/joal/javadoc/</link> -->
-                        <link>https://static.javadoc.io/com.github.purejavacomm/purejavacomm/1.0.1.RELEASE/</link>
-                        <link>https://static.javadoc.io/com.alexandriasoftware.swing/jsplitbutton/1.3.1/</link>
+
                     </links>
                 </configuration>
             </plugin>
@@ -1272,7 +1280,7 @@
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
-            <version>4.2.2</version>
+            <version>6.1.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -1376,7 +1384,7 @@
         <dependency>
             <groupId>org.python</groupId>
             <artifactId>jython-standalone</artifactId>
-            <version>2.7.2</version>
+            <version>2.7.4</version>
         </dependency>
         <!--
         <dependency>
@@ -1490,9 +1498,16 @@
                     <artifactId>xml-apis</artifactId>
                 </exclusion>
             </exclusions>
-            <!-- the next two lines force use of the local lib/openlcb.jar file -->
+            <!-- The next two lines force use of the local lib/openlcb.jar file. -->
+            <!-- This is needed when we're using a custom openlcb.jar file -->
+            <!-- not yet available on a maven repository. -->
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/openlcb.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.github.weisj</groupId>
+            <artifactId>darklaf-core</artifactId>
+            <version>3.0.2</version>
         </dependency>
         <dependency>
             <groupId>org.usb4java</groupId>
@@ -1515,7 +1530,7 @@
         <dependency>
             <groupId>com.github.spotbugs</groupId>
             <artifactId>spotbugs-annotations</artifactId>
-            <version>4.7.3</version>
+            <version>4.8.6</version>
         </dependency>
         <dependency>
             <groupId>xerces</groupId>
@@ -1561,33 +1576,39 @@
             <version>1.0.5</version>
         </dependency>
         <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>3.5.11</version>
-            <scope>test</scope>
+            <groupId>com.fazecast</groupId>
+            <artifactId>jSerialComm</artifactId>
+            <version>2.10.4</version>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-inline</artifactId>
-            <version>3.5.11</version>
+            <artifactId>mockito-core</artifactId>
+            <version>5.12.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>3.5.11</version>
+            <version>5.12.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>net.bytebuddy</groupId>
             <artifactId>byte-buddy</artifactId>
-            <version>1.10.14</version>
+            <version>1.14.15</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>net.bytebuddy</groupId>
             <artifactId>byte-buddy-agent</artifactId>
-            <version>1.10.14</version>
+            <version>1.14.15</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.objenesis/objenesis -->
+        <dependency>
+            <groupId>org.objenesis</groupId>
+            <artifactId>objenesis</artifactId>
+            <version>3.3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -1681,59 +1702,57 @@
             </exclusions>
         </dependency>
 		<!-- //BiDiB client library -->
-		<!-- jbidibc 2.0.15 -->
+		<!-- jbidibc 2.0.29 -->
         <dependency>
             <groupId>org.bidib.jbidib</groupId>
             <artifactId>jbidibc-core</artifactId>
-            <version>2.0.15</version>
+            <version>2.0.29</version>
         </dependency>
         <dependency>
             <groupId>org.bidib.jbidib</groupId>
             <artifactId>jbidibc-serial</artifactId>
-            <version>2.0.15</version>
+            <version>2.0.29</version>
         </dependency>
         <dependency>
             <groupId>org.bidib.jbidib</groupId>
             <artifactId>jbidibc-simulation</artifactId>
-            <version>2.0.15</version>
+            <version>2.0.29</version>
         </dependency>
         <dependency>
             <groupId>org.bidib.jbidib</groupId>
-            <artifactId>jbidibc-purejavacomm</artifactId>
-            <version>2.0.15</version>
-            <exclusions>
-				<!-- don't use special purejavacomm mentioned in jbidibc-purejavacomm -->
-                <exclusion>
-                    <groupId>org.bidib.com.github.purejavacomm</groupId>
-                    <artifactId>purejavacomm</artifactId>
-                </exclusion>
-            </exclusions>
+            <artifactId>jbidibc-jserialcomm</artifactId>
+            <version>2.0.29</version>
         </dependency>
         <dependency>
             <groupId>org.bidib.jbidib</groupId>
             <artifactId>jbidibc-messages</artifactId>
-            <version>2.0.15</version>
+            <version>2.0.29</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bidib.jbidib</groupId>
+            <artifactId>jbidibc-netbidib</artifactId>
+            <version>2.0.29</version>
         </dependency>
         <dependency>
             <groupId>org.bidib.jbidib</groupId>
             <artifactId>jbidibc-net-serial-over-tcp</artifactId>
-            <version>2.0.15</version>
+            <version>2.0.29</version>
         </dependency>
-		<!-- BiDiB Wizard Simulation 2.0.15 -->
+		<!-- BiDiB Wizard Simulation 2.0.30 -->
        <dependency>
             <groupId>org.bidib.jbidib</groupId>
             <artifactId>bidibwizard-common</artifactId>
-            <version>2.0.15</version>
+            <version>2.0.30</version>
         </dependency>
        <dependency>
             <groupId>org.bidib.jbidib</groupId>
             <artifactId>bidibwizard-model</artifactId>
-            <version>2.0.15</version>
+            <version>2.0.30</version>
         </dependency>
         <dependency>
             <groupId>org.bidib.jbidib</groupId>
             <artifactId>bidibwizard-simulation</artifactId>
-            <version>2.0.15</version>
+            <version>2.0.30</version>
         </dependency>
         <!--  dependencies from jbidibc and bidibwizard -->
         <dependency>
@@ -1777,6 +1796,11 @@
             <version>1.8.1</version>
         </dependency>
  		<!-- //BiDiB -->
+      <dependency>
+        <groupId>org.reflections</groupId>
+        <artifactId>reflections</artifactId>
+        <version>0.10.2</version>
+      </dependency>
     </dependencies>
 
     <repositories>
@@ -1793,6 +1817,12 @@
         <repository>
             <id>mvnrepository.com</id>
             <url>https://repo1.maven.org/maven2/</url>
+        </repository>
+        <repository>
+            <id>jogamp-remote</id>
+            <name>jogamp test mirror</name>
+            <url>https://jogamp.org/deployment/maven/</url>
+            <layout>default</layout>
         </repository>
         <!--
         Local "repository" hosting libraries not available through maven.org
